Update compose.yaml and add RestController in backend
The compose.yaml file has been modified to add new docker image details and platform specification for the backend service. Also, a new RestController has been implemented in the backend, serving the 'GET /all' endpoint. A cloudbuild.yaml file is also added to include docker compose steps.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,8 @@
 services:
   backend:
     build: backend
+    image: europe-central2-docker.pkg.dev/hardy-technique-415617/foo-repo/backend
+    platform: linux/amd64
     ports:
       - 8080:8080
     environment:
